--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,3 +16,5 @@ Imports:
     lubridate,
     magrittr,
     tibble
+URL: https://github.com/cgpeltier/ggtimeline
+BugReports: https://github.com/cgpeltier/ggtimeline/issues
